# AulasRedes

./: README.md
aulas/: Dockerfile  compose.yaml  counter.sh
aulas/aula_lua/.devcontainer/: Dockerfile  devcontainer.json
aulas/exercicios/: CIDR.md
avaliacoes/trabalhos/T2/: .env.template  Banco.py  Dockerfile  Pagina.py  README.md  __init__.py  docker-compose.yml  init.sql  pyproject.toml
avaliacoes/trabalhos/T2/Q2/: README.md
avaliacoes/trabalhos/T3/: README.md
avaliacoes/trabalhos/T4/: 1.in  1.out  teste.py  trabalhoIPS.py
